--- a/html/InicioSesion.html
+++ b/html/InicioSesion.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../proyecto-inicio-sesion/Estilos.css">
+    <link rel="stylesheet" href="../css/Estilos.css">
     <title>Iniciar Sesion</title>
 </head>
 
 <body>
+
+    <div class="login">
 
         <div class="titulo">
             <h1>Iniciar Sesion</h1>
@@ -29,9 +31,11 @@
 
             <h5>O</H5>
 
-            <input type="submit" value="Crear una cuenta nueva">
+            <input type="button" value="Crear una cuenta nueva">
         </div>
-    
+
+    </div>
 
 </body>
+
 </html>
